--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -11,4 +11,5 @@ jobs:
       - run: npm install -g bats
       - run: bats -v
       - run: composer install
+      - run: composer update
       - run: ls
